Refactor code for improved readability and consistency by adjusting formatting, removing unnecessary imports, and standardizing injection annotations across multiple classes.